[package]
name = "diffsync"
description = "Structures to keep clients up to date with a server, with the client initiating the synchronization, and the server keeping track of different clients last known state"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff-struct = "0.5.1"
serde = { version = "1.0.159", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
pretty_assertions = "1.3.0"
rand = "0.8.5"
random_variant = "0.2.4"
serde_json = "1.0.95"
