[package]
name = "diffsync"
description = "Structures to keep clients up to date with a server, with the client initiating the synchronization, and the server keeping track of different clients last known state"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["impl_schemars"]
impl_schemars = ["schemars"]
bevy_support = ["bevy"]

[dependencies]
diff-struct = "0.5.1"
serde = { version = "1.0.159", features = ["derive"] }
dashmap = { version = "5.4.0", features = ["serde"] }
log = "0.4.17"
twox-hash = "1.6.3"

[dependencies.schemars] 
optional = true
version = "0.8"

[dependencies.bevy] 
optional = true
default-features = false
version = "0.10"

[dev-dependencies]
bincode = "1.3.3"
pretty_assertions = "1.3.0"
rand = "0.8.5"
random_variant = "0.2.4"
serde_json = "1.0.95"


